--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,21 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="33.75dp"
+        android:layout_height="33.75dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="278.12dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="15.62dp"
+        android:text="@string/magic_shop"
+        android:textAppearance="@style/magic_shop"
+        android:gravity="top"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
