category 선택 버튼 구현

--- a/app/src/main/res/layout/category_selection.xml
+++ b/app/src/main/res/layout/category_selection.xml
@@ -133,27 +133,81 @@
             <!-- ImageView 1 -->
 
             <!-- ImageView 2 -->
-            <ImageView
-                android:id="@+id/category_selection_list_id"
-                android:layout_width="163dp"
-                android:layout_height="600dp"
-                android:src="@drawable/category_selection_list"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.63" />
 
-            <ImageView
-                android:id="@+id/category_selection_list2_id"
+            <android.widget.Button
+                android:id="@+id/btn_top_id"
                 android:layout_width="163dp"
-                android:layout_height="303dp"
-                android:src="@drawable/category_selection_list_empty"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.004"
-                app:layout_constraintStart_toEndOf="@id/category_selection_list_id"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.995" />
+                android:layout_height="60dp"
+                android:layout_margin="0dp"
+                android:text="@string/category_top"
+                android:textColor="@color/category_main_color"
+                android:background="@drawable/category_btn_selected"
+                android:contentDescription="My Button Description" />
+
+            <android.widget.Button
+                android:id="@+id/btn_outer_id"
+                android:layout_width="163dp"
+                android:layout_height="60dp"
+                android:layout_margin="0dp"
+                android:text="@string/category_outer"
+                android:textColor="@color/category_text_color"
+                android:background="@drawable/category_btn"
+                android:contentDescription="My Button Description" />
+
+            <android.widget.Button
+                android:id="@+id/btn_pants_id"
+                android:layout_width="163dp"
+                android:layout_height="60dp"
+                android:layout_margin="0dp"
+                android:text="@string/category_pants"
+                android:textColor="@color/category_text_color"
+                android:background="@drawable/category_btn"
+                android:contentDescription="My Button Description" />
+
+            <android.widget.Button
+                android:id="@+id/btn_skirt_one_piece_id"
+                android:layout_width="163dp"
+                android:layout_height="60dp"
+                android:layout_margin="0dp"
+                android:textColor="@color/category_text_color"
+                android:background="@drawable/category_btn"
+                android:contentDescription="My Button Description"
+                android:text="@string/category_skirt_one_piece" />
+
+            <android.widget.Button
+                android:id="@+id/btn_shoes_id"
+                android:layout_width="163dp"
+                android:layout_height="60dp"
+                android:layout_margin="0dp"
+                android:text="@string/category_shoes"
+                android:textColor="@color/category_text_color"
+                android:background="@drawable/category_btn"
+                android:contentDescription="My Button Description" />
+
+            <android.widget.Button
+                android:id="@+id/btn_bag_id"
+                android:layout_width="163dp"
+                android:layout_height="60dp"
+                android:layout_margin="0dp"
+                android:text="@string/category_bag"
+                android:textColor="@color/category_text_color"
+                android:background="@drawable/category_btn"
+                android:contentDescription="My Button Description" />
+
+            <android.widget.Button
+                android:id="@+id/btn_etc_id"
+                android:layout_width="163dp"
+                android:layout_height="349dp"
+                android:layout_margin="0dp"
+                android:textColor="@color/category_text_color"
+                android:background="@drawable/category_btn"
+                android:contentDescription="My Button Description" />
+
+
+
+
+
+
 
             <!-- Add your existing views or other views here -->
 
@@ -220,7 +274,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/btn1_id"
+                        android:id="@+id/btn_top1_id"
                         android:layout_width="60dp"
                         android:layout_height="66dp"
                         android:layout_marginEnd="8dp"
@@ -228,7 +282,7 @@
                         android:contentDescription="My Button Description" />
 
                     <Button
-                        android:id="@+id/btn2_id"
+                        android:id="@+id/btn_top2_id"
                         android:layout_width="60dp"
                         android:layout_height="66dp"
                         android:layout_marginEnd="8dp"
@@ -236,7 +290,7 @@
                         android:contentDescription="My Button Description" />
 
                     <Button
-                        android:id="@+id/btn3_id"
+                        android:id="@+id/btn_top3_id"
                         android:layout_width="60dp"
                         android:layout_height="66dp"
                         android:layout_marginEnd="8dp"
@@ -257,7 +311,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/btn4_id"
+                        android:id="@+id/btn_top4_id"
                         android:layout_width="60dp"
                         android:layout_height="66dp"
                         android:layout_marginEnd="8dp"
@@ -265,7 +319,7 @@
                         android:contentDescription="My Button Description" />
 
                     <Button
-                        android:id="@+id/btn5_id"
+                        android:id="@+id/btn_top5_id"
                         android:layout_width="60dp"
                         android:layout_height="66dp"
                         android:layout_marginEnd="8dp"
@@ -273,7 +327,7 @@
                         android:contentDescription="My Button Description" />
 
                     <Button
-                        android:id="@+id/btn6_id"
+                        android:id="@+id/btn_top6_id"
                         android:layout_width="60dp"
                         android:layout_height="66dp"
                         android:layout_marginEnd="8dp"
@@ -294,7 +348,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/btn7_id"
+                        android:id="@+id/btn_top7_id"
                         android:layout_width="60dp"
                         android:layout_height="66dp"
                         android:layout_marginEnd="8dp"
@@ -302,7 +356,7 @@
                         android:contentDescription="My Button Description" />
 
                     <Button
-                        android:id="@+id/btn8_id"
+                        android:id="@+id/btn_top8_id"
                         android:layout_width="60dp"
                         android:layout_height="66dp"
                         android:layout_marginEnd="8dp"
@@ -310,7 +364,7 @@
                         android:contentDescription="My Button Description" />
 
                     <Button
-                        android:id="@+id/btn9_id"
+                        android:id="@+id/btn_top9_id"
                         android:layout_width="60dp"
                         android:layout_height="66dp"
                         android:layout_marginEnd="8dp"
@@ -330,7 +384,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/btn10_id"
+                        android:id="@+id/btn_top10_id"
                         android:layout_width="60dp"
                         android:layout_height="66dp"
                         android:layout_marginEnd="8dp"
@@ -338,7 +392,7 @@
                         android:contentDescription="My Button Description" />
 
                     <Button
-                        android:id="@+id/btn11_id"
+                        android:id="@+id/btn_top11_id"
                         android:layout_width="60dp"
                         android:layout_height="66dp"
                         android:layout_marginEnd="8dp"
@@ -346,7 +400,7 @@
                         android:contentDescription="My Button Description" />
 
                     <Button
-                        android:id="@+id/btn12_id"
+                        android:id="@+id/btn_top12_id"
                         android:layout_width="60dp"
                         android:layout_height="66dp"
                         android:layout_marginEnd="8dp"
