--- a/app/src/main/res/layout/mypage_activity_delivery_address_manage.xml
+++ b/app/src/main/res/layout/mypage_activity_delivery_address_manage.xml
@@ -45,15 +45,17 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="380dp"
-        android:layout_height="670dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="375dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_delivery_address_plus"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header_title" />
-
 
     <Button
         android:id="@+id/btn_delivery_address_plus"
@@ -63,8 +65,8 @@
         android:layout_marginBottom="24dp"
         android:background="@color/main"
         android:text="주소 추가"
-        android:textSize="20sp"
         android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
