주소 관리 및 추가 페이지 ui 완성

--- a/app/src/main/res/layout/mypage_activity_delivery_address_edit.xml
+++ b/app/src/main/res/layout/mypage_activity_delivery_address_edit.xml
@@ -8,10 +8,10 @@
 
     <Button
         android:id="@+id/btn_back"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="22dp"
-        android:layout_marginTop="22dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/btn_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -21,12 +21,13 @@
 
     <Button
         android:id="@+id/btn_home"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="27dp"
+        android:layout_height="27dp"
+        android:layout_marginLeft="360dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/btn_home"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.934"
+        app:layout_constraintHorizontal_bias="0.01"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
@@ -36,10 +37,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="22dp"
-        android:text="주소 변경"
+        android:layout_marginTop="21dp"
+        android:text="주소 관리"
         android:textSize="22sp"
-        android:textStyle="bold"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
