--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,26 @@
     <style name="magic_shop">
         <item name="android:textSize">26sp</item>
         <item name="android:textColor">#8E8BD8</item>
-        <!-- 다른 스타일 속성들 -->
     </style>
+
+    <style name="magic_shop_1">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#8E8BD8</item>
+    </style>
+
+    <style name="some_id">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
+    <style name="some_id1">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#8E8BD8</item>
+    </style>
+
+    <style name="register">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
 </resources>
