--- a/app/src/main/res/layout/mypage_activity_delivery_address_plus.xml
+++ b/app/src/main/res/layout/mypage_activity_delivery_address_plus.xml
@@ -8,10 +8,10 @@
 
     <Button
         android:id="@+id/btn_back"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_marginLeft="22dp"
+        android:layout_marginTop="26dp"
         android:background="@drawable/btn_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -21,10 +21,10 @@
 
     <Button
         android:id="@+id/btn_home"
-        android:layout_width="27dp"
-        android:layout_height="27dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginLeft="360dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/btn_home"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.01"
@@ -37,10 +37,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="26dp"
         android:text="주소 추가"
         android:textColor="@color/black"
         android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -69,6 +70,7 @@
         android:layout_marginTop="12dp"
         android:background="@drawable/edit_text_rounded_border_gray"
         android:ems="10"
+        android:paddingLeft="10dp"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,6 +99,7 @@
         android:layout_marginTop="12dp"
         android:background="@drawable/edit_text_rounded_border_gray"
         android:ems="10"
+        android:paddingLeft="10dp"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -125,6 +128,7 @@
         android:layout_marginTop="12dp"
         android:background="@drawable/edit_text_rounded_border_gray"
         android:ems="10"
+        android:paddingLeft="10dp"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -153,6 +157,7 @@
         android:layout_marginTop="12dp"
         android:background="@drawable/edit_text_rounded_border_gray"
         android:ems="10"
+        android:paddingLeft="10dp"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -166,6 +171,7 @@
         android:layout_marginTop="12dp"
         android:background="@drawable/edit_text_rounded_border_gray"
         android:ems="10"
+        android:paddingLeft="10dp"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -179,6 +185,7 @@
         android:layout_marginTop="12dp"
         android:background="@drawable/edit_text_rounded_border_gray"
         android:ems="10"
+        android:paddingLeft="10dp"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -207,6 +214,7 @@
         android:layout_marginTop="12dp"
         android:background="@drawable/edit_text_rounded_border_gray"
         android:ems="10"
+        android:paddingLeft="10dp"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -228,7 +236,7 @@
 
     <Button
         android:id="@+id/btn_delivery_address_plus_check"
-        android:layout_width="370dp"
+        android:layout_width="360dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_marginBottom="20dp"
