--- a/app/src/main/res/layout/mypage_activity_delivery_address_manage.xml
+++ b/app/src/main/res/layout/mypage_activity_delivery_address_manage.xml
@@ -49,7 +49,7 @@
         tools:ignore="HardcodedText" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/address_recyclerView"
         android:layout_width="375dp"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
