--- a/app/src/main/res/layout/mypage_activity_delivery_check.xml
+++ b/app/src/main/res/layout/mypage_activity_delivery_check.xml
@@ -53,7 +53,7 @@
         tools:ignore="HardcodedText" />
 
     <ImageView
-        android:id="@+id/user_image"
+        android:id="@+id/productImage"
         android:layout_width="70dp"
         android:layout_height="90dp"
         android:layout_alignParentTop="true"
@@ -78,7 +78,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/user_image"
+        app:layout_constraintStart_toEndOf="@+id/productImage"
         app:layout_constraintTop_toBottomOf="@+id/deliveryText"
         tools:ignore="HardcodedText" />
 
