마이페이지 ui 완료

--- a/app/src/main/res/layout/mypage_activity_delivery_check.xml
+++ b/app/src/main/res/layout/mypage_activity_delivery_check.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="411dp"
-    android:layout_height="845dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:clipToOutline="true"
     android:orientation="vertical">
 
@@ -14,7 +14,7 @@
         android:layout_height="26dp"
         android:layout_marginLeft="22dp"
         android:layout_marginTop="26dp"
-        android:background="@drawable/btn_back"
+        android:background="@drawable/mypage_btn_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +59,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="16dp"
-        android:src="@drawable/clothes"
+        android:src="@drawable/mypage_clothes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,7 +72,7 @@
         android:layout_gravity="center"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="40dp"
-        android:text="상품명"
+        android:text=""
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -98,13 +98,13 @@
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/TrackingNumber"
+        android:id="@+id/trackingNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="68dp"
-        android:text="012345678910"
+        android:text=""
         android:textColor="@color/black"
         android:textSize="14sp"
         android:textStyle="bold"
@@ -146,7 +146,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/btn_callCourierCompany"
-        app:layout_constraintTop_toBottomOf="@+id/TrackingNumber"
+        app:layout_constraintTop_toBottomOf="@+id/trackingNumber"
         tools:ignore="HardcodedText,SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
