--- a/app/src/main/res/layout/mypage_activity_refund_account_manage.xml
+++ b/app/src/main/res/layout/mypage_activity_refund_account_manage.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="411dp"
-    android:layout_height="845dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:clipToOutline="true"
     android:orientation="vertical">
 
@@ -14,7 +14,7 @@
         android:layout_height="26dp"
         android:layout_marginLeft="22dp"
         android:layout_marginTop="26dp"
-        android:background="@drawable/btn_back"
+        android:background="@drawable/mypage_btn_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +27,7 @@
         android:layout_height="30dp"
         android:layout_marginLeft="360dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/btn_home"
+        android:background="@drawable/mypage_btn_home"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.01"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +70,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="12dp"
         android:layout_gravity="center"
-        android:background="@drawable/edit_text_rounded_border_gray"
+        android:background="@drawable/mypage_edit_text_rounded_border_gray"
         android:ems="10"
         android:inputType="textPersonName"
         android:paddingLeft="10dp"
@@ -99,7 +99,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="12dp"
         android:layout_gravity="center"
-        android:background="@drawable/edit_text_rounded_border_gray"
+        android:background="@drawable/mypage_edit_text_rounded_border_gray"
         android:ems="10"
         android:inputType="textPersonName"
         android:paddingLeft="10dp"
@@ -128,7 +128,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="12dp"
         android:layout_gravity="center"
-        android:background="@drawable/edit_text_rounded_border_gray"
+        android:background="@drawable/mypage_edit_text_rounded_border_gray"
         android:ems="10"
         android:inputType="textPersonName"
         android:paddingLeft="10dp"
