--- a/app/src/main/res/layout/mypage_activity_delivery_address_manage.xml
+++ b/app/src/main/res/layout/mypage_activity_delivery_address_manage.xml
@@ -13,7 +13,7 @@
         android:layout_height="26dp"
         android:layout_marginLeft="22dp"
         android:layout_marginTop="26dp"
-        android:background="@drawable/btn_back"
+        android:background="@drawable/mypage_btn_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
         android:layout_height="30dp"
         android:layout_marginLeft="360dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/btn_home"
+        android:background="@drawable/mypage_btn_home"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.01"
         app:layout_constraintStart_toStartOf="parent"
