--- a/app/src/main/res/layout/mypage_activity_order_delivery_list.xml
+++ b/app/src/main/res/layout/mypage_activity_order_delivery_list.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clipToOutline="true"
     android:orientation="vertical">
 
     <Button
@@ -13,7 +12,7 @@
         android:layout_height="26dp"
         android:layout_marginLeft="22dp"
         android:layout_marginTop="26dp"
-        android:background="@drawable/btn_back"
+        android:background="@drawable/mypage_btn_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +25,7 @@
         android:layout_height="30dp"
         android:layout_marginLeft="360dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/btn_home"
+        android:background="@drawable/mypage_btn_home"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.01"
         app:layout_constraintStart_toStartOf="parent"
