--- a/app/src/main/res/layout/mypage_item_refund_exchange.xml
+++ b/app/src/main/res/layout/mypage_item_refund_exchange.xml
@@ -40,7 +40,7 @@
         android:layout_width="80dp"
         android:layout_height="100dp"
         android:layout_marginTop="16dp"
-        android:src="@drawable/clothes"
+        android:src="@drawable/mypage_clothes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
